--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     // library to make HTTP requests
-    compile 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.volley:volley:1.0.0'
     // library to load images from links and display it in the App
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
